[package]
name = "bitcoin-traversal"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { package = "bitcoinkernel", version = "0.1.1" }

[[bin]]
name = "stats"
path = "src/stats.rs"

[[bin]]
name = "fastcache"
path = "src/cache_hints.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
